--- a/index.html
+++ b/index.html
@@ -9,12 +9,14 @@
 </head>
 <body>
     <div class="portfolio-header">
+        <div class="wrapper portfolio-header__wrapper">
         <a href="index.html" class="portfolio-header-name-logo">ARADHANA</a>
         <div class="portfolio-header-menu-list">
-            <a class="active" href="#home">Home</a>
-            <a href="#contact">Contact</a>
-            <a href="#about">About</a>
+            <a class="active" href="About">About</a>
+            <a href="#Work">Work</a>
+            <a href="#Contact">Contact</a>
         </div>
+    </div>
     </div>
   
 </body>
